# torch-erg

./: .gitignore  compare_samplers.py  ensembler.py  example.py  exec_ebm.py  exec_gwg_gnn.py  gnn_labels_train.py  gwg_ebm_results.err  gwg_ebm_results.out  pyproject.toml  run_community_sbm.py  run_ensemble.sh  run_erg_GWGensemble.err  run_erg_GWGensemble.out  run_erg_GWGexample.err  run_erg_GWGexample.out  run_erg_MHensemble.err  run_erg_MHensemble.out  run_erg_MHexample.err  run_erg_MHexample.out  run_erg_ensemble.err  run_erg_ensemble.out  run_erg_example.err  run_erg_example.out  run_example.sh  run_gnn.sh  run_main_test.sh  tesi_notebook_esempi.ipynb  tests.ipynb  tests_3communities.ipynb  tests_3communities.py
deep_ebm/: gnn_ebm.py  labels_sampling.py  plotting_obs.py  stable_gnn.py  utils_ebm.py
gen_plots/: plot_energies.py  plot_energies2comm.py
graph_generation/: __init__.py  community_sbm.py  graph_sampler.py  test_community_sbm.py  visualization.py
hybrid_gen/: exec_ab_ebm.py  exec_ebm.py  exec_gwg_gnn.py  exec_hybrid.py  exec_hybrid_ba.py  exec_labels_comm.py  exec_topo_ebm.py  spectre_exec_ebm.py
notebooks/: debug.ipynb  tesi_notebook_esempi.ipynb
src/torch_erg/: __init__.py  betas_compute.py  ham_functions.py  ham_stats.py  load_pglib_opf.py  pg_utils.py  samplers.py  utils.py
