[project]
name = "torch-erg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lykos98", email = "francy273998@gmail.com" }
]
requires-python = ">=3.9"
dependencies = ["torch", "numpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
